--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="description" content="Assistente virtual para acompanhamento de tratamento com Ozempic" />
     <meta name="theme-color" content="#0d9488" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="OzeAssist" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-TileColor" content="#0d9488" />
+    <meta name="msapplication-navbutton-color" content="#0d9488" />
+    <meta name="application-name" content="OzeAssist" />
     <title>OzeAssist - Assistente de Tratamento</title>
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" href="/icons/icon-192x192.png" />
@@ -18,6 +21,13 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        /* Garantir que o body ocupe toda a altura em modo PWA */
+        min-height: 100vh;
+        min-height: -webkit-fill-available; /* iOS Safari */
+      }
+      html {
+        /* Garantir altura completa no iOS */
+        height: -webkit-fill-available;
       }
       /* Esconder barra de rolagem para Chrome, Safari e Opera */
       ::-webkit-scrollbar {
@@ -27,6 +37,14 @@
       * {
         -ms-overflow-style: none;  /* IE e Edge */
         scrollbar-width: none;  /* Firefox */
+      }
+      /* Garantir que o app ocupe toda a tela em modo standalone */
+      @media all and (display-mode: standalone) {
+        body {
+          /* Remover qualquer padding/margin que possa aparecer */
+          margin: 0;
+          padding: 0;
+        }
       }
     </style>
   <script type="importmap">
